--- a/monthly_challenges/templates/base.html
+++ b/monthly_challenges/templates/base.html
@@ -19,6 +19,7 @@ So this is the base html file, this is kind of like the layout file where some e
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block css_files %}{% endblock %}
+        {% comment %} Importing the global css file {% endcomment %}
         <link rel="stylesheet" href="{% static "base.css" %}">
     </head>
     <body>
