--- a/monthly_challenges/static/base.css
+++ b/monthly_challenges/static/base.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-html{
-    font-family: "Montserrat", sans-serif;;
-    
+html {
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
   margin: 0;
-  padding:0;
-    box-sizing: border-box;
+  padding: 0;
+  box-sizing: border-box;
   background-color: #1a1a1a;
 }
